yaml/GoogleCrawler.yaml
apiVersion: v1
kind: Pod
metadata:
  name: google-crawler
spec:
  hostNetwork: true
  containers:
  - name: google-crawler
    image: chkao777/tsmc-project:crawler
    imagePullPolicy: Always
