yaml/deploy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: google-crawler
spec:
  hostNetwork: true
  containers:
  - name: google-crawler
    image: chkao777/tsmc-project:crawler
    imagePullPolicy: Always 
---
apiVersion: v1
kind: Pod
metadata:
  name: google-crawler-controller
spec:
  hostNetwork: true
  containers:
  - name: google-crawler-controller
    image: chkao777/tsmc-project:crawler-controller
    imagePullPolicy: Always 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      hostNetwork: true
      containers:
      - name: mongo
        image: mongo
        imagePullPolicy: IfNotPresent 
        ports:
          - containerPort: 27017
        volumeMounts:
        - mountPath: /data/db
          name: mongo-data
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongo-pvc
---
apiVersion: v1
kind: Pod
metadata:
  name: redis-server
spec:
  hostNetwork: true
  containers:
  - name: redis-server
    image: redis
    imagePullPolicy: IfNotPresent 
    ports:
      - containerPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 4
  selector:
    matchLabels:
      app: single-worker
  template:
    metadata:
      labels:
        app: single-worker
    spec:
      hostNetwork: true
      containers:
      - name: worker
        image: chkao777/tsmc-project:worker
        imagePullPolicy: Always 

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeserver
  template:
    metadata:
      labels:
        app: nodeserver
    spec:
      hostNetwork: true
      containers:
      - name: nodeserver
        image: chkao777/tsmc-project:nodeserver
        imagePullPolicy: Always
        ports:
      - containerPort: 3000
