yaml/nodeserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeserver
  template:
    metadata:
      labels:
        app: nodeserver
    spec:
      containers:
      - name: nodeserver
        image: chkao777/tsmc-project:nodeserver
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
