yaml/redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-server
spec:
  hostNetwork: true
  containers:
  - name: redis-server
    image: redis
    imagePullPolicy: IfNotPresent 
    ports:
      - containerPort: 6379
