yaml/rq-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
        app: rq-dashboard
        tier: frontend
  template:
    metadata:
      labels:
        app: rq-dashboard
        tier: frontend
    spec:
      containers:
      - name: rq-dashboard
        image: docker.io/jayzhan/tsmc-project:rq-dashboard
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 5000
