yaml/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 4
  selector:
    matchLabels:
      app: single-worker
  template:
    metadata:
      labels:
        app: single-worker
    spec:
      containers:
      - name: worker
        image: chkao777/tsmc-project:worker
        imagePullPolicy: Always
