yaml/nodeserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeserver-service
spec:
  type: NodePort
  selector:
    app: nodeserver
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30036
