yaml/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
    role: leader
    tier: backend
spec:
  selector:
    app: redis
    role: leader
    tier: backend
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
