yaml/rq-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: rq-dashboard
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 5000  
  selector:
    app: rq-dashboard
    tier: frontend
