yaml/nodeserver-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: nodeserver-ingress
spec:
  defaultBackend:
    service:
      name: nodeserver-service
      port:
        number: 3000
  rules:
  - http:
      paths:
      - path: /rq
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 5000
